[gd_scene load_steps=4 format=3 uid="uid://da2k46nu3s0qc"]

[ext_resource type="Script" path="res://scns/player/player.gd" id="1_gnr0g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5ys8c"]
radius = 0.2
height = 1.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_q37ce"]
radius = 0.2
height = 1.5
radial_segments = 6
rings = 3

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_gnr0g")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_5ys8c")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
mesh = SubResource("CapsuleMesh_q37ce")

[node name="CamAnchH" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="CamAnchD" type="Node3D" parent="CamAnchH"]
unique_name_in_owner = true

[node name="CamAnch" type="Node3D" parent="CamAnchH/CamAnchD"]
unique_name_in_owner = true
top_level = true
